乘客端登录 1.login 2.获取用户信息 3.登录校验(自定义注解+aop) 4.获取微信手机号(个人版公众号获取不了 直接返回true跳过了)

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>service-client</module>
     </modules>
 
+
     <properties>
         <java.version>17</java.version>
         <cloud.version>2022.0.2</cloud.version>
@@ -48,6 +49,8 @@
         <!-- https://seata.io/zh-cn/docs/overview/what-is-seata.html -->
         <seata.version>1.7.1</seata.version>
         <drools.version>8.41.0.Final</drools.version>
+
+        <hutool.version>5.8.25</hutool.version>
     </properties>
 
     <!--配置dependencyManagement锁定依赖的版本-->
@@ -183,6 +186,13 @@
                 <groupId>org.drools</groupId>
                 <artifactId>drools-mvel</artifactId>
                 <version>${drools.version}</version>
+            </dependency>
+
+            <!-- hutool -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
